include support for full XML schema in the library definition and synchronize with transit to support generic parts